--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -15,32 +15,32 @@ This chapter gives a brief overview of the features and classes of poetry that e
 
 \section{Poetry Theory}
 
-To fully comprehend the task that we are about to undertake, we need to have an understanding of poetry as an art form. Poetry is believed to predate even literacy and has been documented ever since. Over the ages, different styles of poetry have evolved. Here we discuss those styles and the underlying reason for why poetry is written.
+To fully comprehend the task that we are about to undertake, we need to have an understanding of poetry as an art form. It is ever-evolving and different styles have emerged over the years. Here we discuss those styles and the underlying reason for why poetry is written.
 
 \subsection{The Purpose of Poetry}
 \label{sec:purpose}
 Merriam-Webster dictionary defines poetry as:\\
-\emph{writing that formulates a concentrated imaginative awareness of experience in language chosen and arranged to create a specific emotional response through meaning, sound, and rhythm.}
+\emph{'writing that formulates a concentrated imaginative awareness of experience in language chosen and arranged to create a specific emotional response through meaning, sound, and rhythm.'}
 
 Let us break this down:
 \begin{itemize}
-\item{\textit{Formulates} implies that there is method to the process of writing a poem.}
-\item{\textit{Concentrated} accentuates the fact that poems are generally short, as they are counted in stanzas in lines rather than paragraphs and pages.}
-\item{\textit{Imaginative} confirms the fact that this is a creative act, that has a level of non-determinism and need not be entirely realistic.}
-\item{\textit{Awareness of Experience} embodies the need for general background knowledge based on a particular set of experiences that surface when writing a poem.}
-\item{\textit{Language Chosen and Arranged} reiterates that this is a methodical and systematic art - decisions are made carefully with precise intention.}
-\item{\textit{Create a specific emotional response} gives the main purpose of the poem - to express a feeling or an idea and elicit an emotional response.}
-\item{\textit{Through meaning, sound, and rhythm} describes that this purpose is not reached purely by words, but other language features.}
+\item{\textit{\textbf{Formulates}} implies that there is method to the process of writing a poem.}
+\item{\textit{\textbf{Concentrated}} accentuates the fact that poems are generally short, as they are counted in stanzas in lines rather than paragraphs and pages.}
+\item{\textit{\textbf{Imaginative}} confirms the fact that this is a creative act, that has a level of non-determinism and need not be entirely realistic.}
+\item{\textit{\textbf{Awareness of Experience}} embodies the need for general background knowledge based on a particular set of experiences that surface when writing a poem.}
+\item{\textit{\textbf{Language Chosen and Arranged}} reiterates that this is a methodical and systematic art - words are chosen carefully with precise intention.}
+\item{\textit{\textbf{Create a specific emotional response}} gives the main purpose of the poem - to express a feeling or an idea and elicit emotion in the reader.}
+\item{\textit{\textbf{Through meaning, sound, and rhythm}} describes that this purpose is not reached purely by words, but other language features.}
 \end{itemize}
 
-To summarise the purpose of poetry from this, we would say that it is using one's imagination and experience to trigger empathy about a particular topic from the reader. This means that poetry is a vehicle through which poets can share a very personal message that they want the reader to experience and remember. 
+To summarise, the purpose of poetry is to use one's imagination, knowledge and experience to trigger empathy about a particular subject matter. Poetry is a vehicle through which poets can share a very personal message that they want the reader to experience and remember. 
 
-We must keep this in mind throughout the project, as it is important to realise that the features of poetry discussed in the next section might be seen as arbitrary rules on form rather than purposeful techniques used to make the language more concise and effective.
+We must keep this in mind throughout the project, as it is important to realise that the features of poetry discussed in the next section are not arbitrary rules on form but purposeful techniques used to make the language more concise and effective.
 
 \subsection{Features of Poetry}
 \label{sec:features}
 
-The definition above mentions the use of \textit{meaning, sound and rhythm} in poetry. These add an extra layer of subtext to poems to help the author remain concise while still eliciting a full emotional response from the reader. We call these techniques \textit{features} of poetry throughout this paper. There are many features of poetry to address, but we have scoped this project down to concentrate on the following popular ones.
+The earlier definition mentions the use of \textit{meaning, sound and rhythm} in poetry. These add an extra layer of subtext to poems to help the author remain concise while still getting the complete message across. We call these techniques \textit{features} of poetry throughout this paper. There are many features of poetry to address, but we have scoped this project down to concentrate on the following common ones.
 
 \subsubsection{Rhyme}
 \label{sec:rhyme}
@@ -56,7 +56,7 @@ Because they tasted so \textbf{nice}
 \caption{A rhyming quatrain often used in teaching poetry}
 \label{fig:rhyme}
 \end{figure}
-Two words rhyme when they sound similar when spoken out loud. \textit{Cat} and \textit{fat} in figure \ref{fig:rhyme} rhyme, as do \textit{mice} and \textit{nice}. Rhyming words need not spell the same way, for example, \textit{kite} and \textit{height}. 
+Two words rhyme when they sound similar when spoken out loud. \textit{Cat} and \textit{fat} in figure \ref{fig:rhyme} rhyme, as do \textit{mice} and \textit{nice}. Rhyming words need not be spelt similarly, for example, \textit{kite} and \textit{height}. 
 
 Strict rhyme enforces the exact same sound while weak rhyme only requires that the vowel sounds are the same. Examples of weak rhyme are \textit{turtle} with \textit{purple} and \textit{tragedy} with \textit{strategy}. 
 
@@ -71,7 +71,6 @@ Rhyme can also occur within a line (internal rhyme) or between words in the midd
 \item{Used at the end of lines of poetry and songs making the rhythmic structure more distinct.}
 \end{itemize}
 
-In this project, we will detect and reproduce end-line rhyme and internal rhyme where applicable. It will also be prioritised when producing poetry for which a rhyme scheme is not mandatory but fits the purposes.
 
 \subsubsection{Rhythm}
 \label{sec:rhythm}
@@ -88,9 +87,11 @@ there will be no charge.'\\
 \label{fig:haiku}
 \end{figure}
 
-Syllabic rhythm enforces a certain number of syllables to be used in a particular line of poetry. Haikus are the most famous type of poem with this feature - they are three lines long with the first and last lines restricted to 5 syllables and the second to 7. An example is given in Figure \ref{fig:haiku}.
+\textbf{Syllabic rhythm} enforces a certain number of syllables to be used in a particular line of poetry. Haikus, for example, are three lines long with the first and last lines restricted to 5 syllables and the second to 7. An example is given in Figure \ref{fig:haiku}.
 
-Quantitative measures use the fact that some syllables \textit{sound} longer than others when spoken out loud. Long sounding syllables are \textit{stressed} while short ones are \textit{unstressed}. Accentual measures are similar to Quantitative, but they work on the \textit{tendency to emphasize a particular syllable} when spoken out loud, rather than its length. It is important to note that a word's meaning can change depending on stress. For example, '\textbf{ob}ject' is a noun whereas 'ob\textbf{ject}' is a verb.
+\textbf{Quantitative} measures use the fact that some syllables \textit{sound} longer than others when spoken out loud. Long sounding syllables are \textit{stressed} while short ones are \textit{unstressed}. 
+
+\textbf{Accentual} measures are similar to Quantitative, but they work on the \textit{tendency to emphasize a particular syllable} when spoken out loud, rather than its length. It is important to note that a word's meaning can change depending on stress. For example, '\textbf{ob}ject' is a noun whereas 'ob\textbf{ject}' is a verb.
 
 Lines of pre-defined patterns of stressed and unstressed syllables are called \textit{meters}. Lines with meter are made up of individual units called \textit{feet}. The five major foot types in poetry are given in Table \ref{tab:rhythm}.
 
@@ -122,7 +123,7 @@ The metre is formed by repeating feet, typically with up to six feet:
 \end{itemize}
 
 All Shakepeare's sonnets are written in iambic pentameter, i.e. five repetitions of unstressed-stressed syllables. The first line of his Sonnet II as an example:\\
-\textit{When \textbf{for}ty \textbf{win}ters \textbf{shall} be\textbf{siege} thy \textbf{brow}}
+\textit{When \textbf{for}ty \textbf{win}ters \textbf{shall} be\textbf{siege} thy \textbf{brow}}.
 
 \textbf{Major Purposes}
 \begin{itemize}
@@ -131,7 +132,6 @@ All Shakepeare's sonnets are written in iambic pentameter, i.e. five repetitions
 \item{Emphasizes the message by putting stress on the words that matter.}
 \end{itemize}
 
-Rhythm is a fundamentally important feature of poetry, so this project aims to be able to detect and reproduce it consistently and to a high level of accuracy.
 
 \subsubsection{Sound Devices}
 \label{sec:sound}
@@ -139,7 +139,7 @@ This project considers four types of sound devices.
 
 The first is \textbf{onomatopoeia} - words that imitate or suggest sounds of particular sources. For example, the \textit{pow} of a punch or the \textit{tick-tock} of a clock. This technique has mostly been used in comic books to help the reader experience the sound of the scene to go with the image.
 
-The next three devices are repetitions of a pattern of similar sounds, like rhyme. \textbf{Consonance} is the repetition of similar consonant sounds (e.g. \textit{pitter patter} repeats the 'p', 't', and 'r' sounds), while \textbf{assonance} is that of vowels (e.g. \textit{doom and gloom} repeats the 'oo' sound). \textbf{Alliteration} is a special case where the repeated sound occurs at the beginning of consecutive words. \textit{Zany zebras zigzagged through the zoo} has alliteration on the letter 'z'.
+The next three devices are repetitions of a pattern of similar sounds. \textbf{Consonance} is the repetition of similar consonant sounds (e.g. \textit{pitter patter} repeats the 'p', 't', and 'r' sounds), while \textbf{assonance} is that of vowels (e.g. \textit{doom and gloom} repeats the 'oo' sound). \textbf{Alliteration} is a special case where the repeated sound occurs at the beginning of consecutive words. \textit{Zany zebras zigzagged through the zoo} has alliteration on the letter 'z'.
 
 \textbf{Major Purposes}
 \begin{itemize}
@@ -149,11 +149,10 @@ The next three devices are repetitions of a pattern of similar sounds, like rhym
 \item{Sometimes used to suggest danger.}
 \end{itemize}
 
-We aim to detect and reproduce all forms of sound devices explained here. However, there will be a limit to the onomatopoeic vocabulary and it will be unable to create brand new onomatopoeia.
 
 \subsubsection{Structure}
 \label{sec:structure}
-The structure of the poem is the organisation of lines in a poem. The main unit is the stanza, which is a fixed amount of lines grouped by rhythmical pattern.
+The structure of the poem is the organisation of its lines in a poem. The main unit is the \textit{stanza}, which is a fixed number of \textit{lines} grouped by rhythmical pattern.
 
 There are four major types of stanza:
 \begin{itemize}
@@ -185,8 +184,6 @@ The Haiku in Figure \ref{fig:haiku} has a single tercet structure with no repeti
 \item{Ties several thoughts together into one continuous flow.}
 \end{itemize} 
 
-We concentrate on detecting and reproducing accurate structures of common poetry types in this project.
-
 \subsubsection{Symbolism and Imagery}
 \label{sec:symbol}
 Symbolism and imagery are general terms for creating an overall image in the reader's mind by describing a subject or object as something else with desired qualities.
@@ -197,8 +194,8 @@ Techniques include:
 \item{\textbf{Simile}: an object or action is specifically described using an adjective or adverb, but compared to another object that is a stereotypical example of that description. The phrases 'like a' and 'as a' are often used, e.g. \textit{Runs like a cheetah}, \textit{Slippery as an eel}.}
 \item{\textbf{Hyperbole}: unrealistic exaggeration, often used in tandem with metaphor e.g. \textit{Cried a river of tears}.}
 \item{\textbf{Powerful Verb}: a more exciting way to describe an action using unusual verbs, e.g. \textit{Wormed through the crowd}.}
-\item{\textbf{Personification}: see section \ref{sec:pragpers}}
-\item{\textbf{Onomatopoeia}: see section \ref{sec:sound}}
+\item{\textbf{Personification}: using actions and properties associated with sentient objects to describe inanimate ones. Explained further in section \ref{sec:pragpers}}
+\item{\textbf{Onomatopoeia}: as explained in section \ref{sec:sound}}, using imitations of known sounds to richly describe actions and atmosphere.
 \end{itemize}
 
 \textbf{Major Purposes}
@@ -207,23 +204,17 @@ Techniques include:
 \item{Induce empathy from the reader by relating it to something they understand.}
 \end{itemize} 
 
-This paper attempts to detect use of metaphor and simile as well as reproduce it. The pragmatics around the use of metaphor and simile will be considered, for example using the ocean to show power rather than the sun if the poem generally speaks of water. We do not consider Hyperbole and Powerful Verb as they are similar to Metaphor, but it is worth noting that they exist because including them should be an accessible extension for future work.
-
-\subsubsection{Pragmatics and Personification}
+\subsubsection{Context and Personification}
 \label{sec:pragpers}
-Poetry is similar to storytelling in that it has characters around which the poem is written. Understanding who or what they are, their descriptions and their actions are all part of the underlying message that the poet wants to get across. This is the context of the poem and defining it is a pragmatics problem.
+Poetry is similar to storytelling in that it has persona around whom the poem is written. Understanding who or what they are, their descriptions and their actions are all part of the underlying message that the poet wants to get across.
 
-Personification is a technique used by poets to give inanimate objects life, expressing actions and descriptions as if it were human. This is a powerful technique that relates to imagery, helping poets make more abstract messages clearer. For example, \textit{the moon smiled} gives the moon life by describing it as having performed a human-like action with full intention of doing so. Noting the use of personification can make the context of the poem clearer, as often inanimate objects are the subject of the poem.
+Personification is a technique used by poets to give inanimate objects life, expressing actions and descriptions as if it were sentient. This is a powerful technique that relates to imagery, helping poets make abstract messages clearer. For example, \textit{the moon smiled} gives the moon life by describing it as having performed a sentient action with full intention of doing so. Noting the use of personification can make the context of the poem clearer, as inanimate objects are often the subject of the poem.
 
 \textbf{Major Purposes}\\
 Context is the underlying message in its bare form. It is the story that the poet wishes to tell and guides the use of all other features.
 
 In this paper, we aim to extract characters and differentiate them by their descriptions and actions. This is vital in understanding the poem and can help us generalise the uses of features when attempting to produce a coherent story as the backbone to the generated poem. Furthermore, it will help determine the type of poem (narrative, lyrical, descriptive etc.) and will help guide generation of poems of a particular type. 
 
-\subsubsection{Theme}
-Theme is a very abstract term that is difficult to define. It can be thought of as the worldly context of the poem, often requiring better understanding and background knowledge of the poet. For example, Maya Angelou's \textit{I Know Why The Caged Bird Sings} is about oppression of African Americans. It was her way of helping readers empathise with her situation, by personifying a caged bird and the similarities she shares with it. The theme is therefore \textit{oppression}. However, without knowing Angelou's life situation, it would have been impossible to determine.
-
-Theme is beyond the scope of this project, both in interpretation of poetry and generation. However, we will attempt themes that can be summarised into a single word, which we will refer to as \textit{topics}. For example, we will try to emulate the styles of \textit{Love} poems or \textit{War} poems from given examples. This will help give more meaning to the features described here and help in using them in the right context during the generation phase.
 
 \subsection{Classification of Poetry}
 
@@ -241,7 +232,7 @@ There are many types of poem all with different form. However, there are only th
 \item{\textit{Narrative} poems concentrate on telling a story. It therefore has a coherent plot line, several characters with explicit relationships between them, action and climax. Ballads and Epics are types of narrative poems.}
 \end{enumerate}
 
-Some popular poem types do not fall under any one bracket as they can be used in any of the above categories. Examples include Haikus and Limericks. This project aims to be able to place any poem accurately into one of these categories.
+Some popular poem types do not fall under any one bracket as they can be used in any of the above categories. Examples include Haikus and Limericks.
 
 \subsubsection{Popular Types}
 As well as determining the category of poems, we aim to be able to detect and reproduce some popular types of poetry. For this project, we will concentrate on:
@@ -257,12 +248,10 @@ As well as determining the category of poems, we aim to be able to detect and re
 \item{\textit{Free Verse:} No particular features attached to this type.}
 \end{itemize} 
 
-Some of these poems are harder to read and generate than others, particularly in terms of pragmatics. However, this selection covers the main features of poetry that we would like to address so it a good way to evaluate this project.
-
 
 \section{Lessons from Related Work}
 \label{sec:related_work}
-This section looks at six important previous attempts at automatic poetry generation. They each have some aspect of investigation or experimentation that have influenced this project. However, each of these attempts has its limitations that we look to overcome in this project.
+This section looks at six important previous attempts at automatic poetry generation. They each have some aspect of investigation or experimentation that have influenced this project. Conversely, each of these attempts has its limitations that we look to overcome in this project.
 
 \subsection{Actively Gather Inspiration}
 
@@ -300,11 +289,11 @@ a relentless attack, like a bloodhound
 \label{fig:face}
 \end{figure}
 
-The most interesting point of this paper was its admission that inspiration cannot come from the technology and must come from the user. By taking this into account, it now takes inspiration from news articles as seen in Figure \ref{fig:face}. However, since its objective was focused on passing a particular evaluation model, the poems created by this system are relatively simple and the processes rudimentary - using randomness rather than semantic applicability and coherent pragmatics.
+The most interesting point of this paper was its admission that inspiration cannot come from the technology and must come from the user. By taking this into account, it now takes inspiration from news articles as seen in Figure \ref{fig:face}. However, since its objective was focused on passing a particular evaluation model, the poems created by this system are relatively simple and the processes rudimentary - using randomness rather than semantic applicability in word selection.
 
 \subsection{Constrain to Improve Creativity}
 \label{sec:con}
-Recently, Toivanen et al. attempted a solution that used off-the-shelf constraint solvers\cite{toivanen2013harnessing} to produce poetry. Their solution, illustrated in figure \ref{fig:con1}, also received inspiration from another source. This was then combined with other sources to build the set of candidate words, form requirements and content requirements. These were passed into a constraint solver with a manually encoded static constraint library powered by Answer Set Programming.
+Recently, Toivanen et al. attempted a solution that used off-the-shelf constraint solvers\cite{toivanen2013harnessing} to produce poetry. Their solution, illustrated in figure \ref{fig:con1}, also received inspiration from external sources. This is used to build the set of candidate words, form requirements and content requirements that are passed into a constraint solver with a manually encoded static constraint library powered by Answer Set Programming.
 
 \begin{figure}[h!]
 \centering
@@ -334,7 +323,7 @@ The idea that constraints do not hinder but rather help the creative process is 
 \subsection{Learn from Experience}
 \label{sec:RKCP}
 
-Ray Kurtzweil Cybernetic Poet (RKCP), created by Kurtzweil himself\cite{kurzweil1999ray}, addresses the issue of having a predefined template. He uses a stochastic approach that takes advantage of n-grams to build lines from words. The system was trained on a selection of poems and created a template and n-gram corpus from those poems. RKCP would then be able to create similar types of poems. Algorithms were employed to ensure that poems were not exact copies of other poems and to maintain a coherent theme.
+Ray Kurtzweil Cybernetic Poet (RKCP), created by Kurtzweil himself\cite{kurzweil1999ray}, addresses the issue of having a predefined template. He uses a stochastic approach that utilises of n-grams to build lines from words. The system was trained on a selection of poems that created a template and n-gram corpus from those poems. RKCP would use this to create similar types of poems. Some heuristics were employed to ensure that poems were not exact copies of other poems and to maintain a coherent theme.
 
 \begin{figure}[h!]
 \centering
@@ -347,7 +336,7 @@ so hollow I would echo.
 \label{fig:rkcp}
 \end{figure}
 
-This method is more flexible and has granular word selection. However, the vocabulary would still be limited and the form of the poem is not well defined due to being probabilistic. We can see that in Figure \ref{fig:rkcp}, the attempted Haiku has a syllabic rhythm is 4-6-7 as opposed to 5-7-5. A specific purpose or storyline is not definable and the use of imagery is only probabilistic. A lot also depends on the poems given as examples, limiting the pragmatic and semantic capabilities.
+This method is more flexible and has granular word selection. However, the vocabulary would still be limited and the form of the poem is not well defined due to being probabilistic. We can see that in Figure \ref{fig:rkcp}, the attempted Haiku has a syllabic rhythm is 4-6-7 as opposed to the required 5-7-5. A specific purpose or storyline is not definable and the use of imagery is only probabilistic. A lot also depends on the poems in the corpus, limiting semantic capabilities and word selection quality.
 
 
 \subsection{Choose Words Carefully}
@@ -376,11 +365,11 @@ he dwells in a child with a fish.\\
 \label{fig:lion}
 \end{figure}
 
-Of particular note is the structure of a lexical entry into the system. It is enriched with much semantic information, as in Figure \ref{fig:lion}, that backs up the fitness score and helps MCGONAGALL form syntactically and semantically correct sentences. We will use much of his ideas in this area. However, pragmatism is still lacking because of the restrictions on evolution. It does not take particular types of poetry into account and there is little scope for creativity due to the strictness of grammar generated. 
+Of particular note is the structure of a lexical entry into the system. It is enriched with much semantic information, as in Figure \ref{fig:lion}, that backs up the fitness score and helps MCGONAGALL form syntactically and semantically correct sentences. We will use much of his ideas in this area. However, contextual coherence is lacking because of the restrictions imposed on evolution. It does not take particular types of poetry into account and there is little scope for creativity due to the strictness of grammar generated. 
 
 
 \subsection{Derive Insight from Worldly Knowledge}
-Tony Veale's daring approach to knowledge-based poetry generation\cite{veale2013less} concentrates on symbolism and imagery - arguably the hardest tasks in automatic poetry generation. He uses the theory of Mutual Knowledge through norms and stereotypes to build a structure that uses various words to describe objects and derive stereotypical characteristics. Out of this grew a very useful tool: Metaphor Magnet\cite{vealespecifying}.
+Tony Veale's daring approach to knowledge-based poetry generation\cite{veale2013less} concentrates on symbolism and imagery - arguably the hardest tasks in automatic poetry generation. He uses norms and stereotypes to build a structure that uses various words to describe objects and derive stereotypical characteristics. Out of this grew a very useful tool - Metaphor Magnet\cite{vealespecifying}, which was used to create the impressive poetry shown in Figure \ref{fig:veale}.
 
 \begin{figure}[h!]
 \centering
@@ -401,7 +390,7 @@ O Marriage, you disgust me with your undesirable security\\
 \label{fig:veale}
 \end{figure}
 
-His methods have obvious limitations in that they do not consider rhyme, rhythm or any other poetic feature other than symbolism. However, we will take advantage of the tools that have been born out of his project to give this system more symbolic choices of words and phrases as Figure \ref{fig:veale} shows that they are quite impressive.
+His methods have obvious limitations in that they do not consider rhyme, rhythm or any other poetic feature other than symbolism. However, we will take advantage inspiration from the idea of using norms and stereotypes to give this system more symbolic choices of words and phrases.
 
 \subsection{Dare to be Different}
 WASP is one of the first attempts at an automatic poetry generator. It is a rule based system that takes a set of words, a set of verse patterns and returns a set of verses\cite{gervas2000wasp}. It uses heuristics to guide the construction to fit structure, but no semantic limitations are enforced.
@@ -415,20 +404,20 @@ This has obvious limitations but Gervas, the creator of this system, does make a
 %http://delivery.acm.org/10.1145/1880000/1870709/p524-greene.pdf?ip=82.31.135.169&id=1870709&acc=OPEN&key=BF13D071DEA4D3F3B0AA4BA89B4BCA5B&CFID=397642531&CFTOKEN=69509660&__acm__=1390863256_1cb8f68563ec050ead2a0b910996fc19
 
 \section{Brief Overview of Computational Creativity}
-Simon Colton and Geraint Wiggins, pioneers of Computational Creativity, define research in this area as: \\
+Simon Colton and Geraint Wiggins define research in this area as: \\
 \textit{The philosophy, science and engineering of computational systems which, by taking on particular responsibilities, exhibit behaviours that unbiased observers would deem to be creative.}\cite{colton2012computational}
 
-In the context of Automatic Poetry Generation, we are creating a system that is \textit{responsible} for generating aesthetically pleasing, meaningful and novel poems. The poems still need to be sufficiently similar to existing works created by humans such that it \textit{exhibits behaviour} to which \textit{unbiased observers} can relate and recognise.
+In the context of automatic poetry generation, we are creating a system that \textit{takes on the responsibility} of generating aesthetically pleasing, meaningful and novel poems. The poems still need to be sufficiently similar to existing works created by humans such that it \textit{exhibits behaviour} to which \textit{unbiased observers} can relate and recognise.
 
-This definition has evolved from one where behaviour was \textit{deemed creative if exhibited by humans}\cite{wiggins2006searching}. However, recent developments in the area have lead to the requirement of more quantitative measures for evaluation than Turing-style tests, such as the FACE and IDEA descriptive models\cite{colton2011computational}.
+This definition has evolved from one where behaviour was \textit{deemed creative if and only if it can be exhibited by humans}\cite{wiggins2006searching}. However, recent developments in the area have lead to the requirement of more quantitative measures for evaluation than Turing-style tests, such as the FACE and IDEA descriptive models\cite{colton2011computational}.
 
-This area of research has come under scrutiny for philosophical reasons, but has had support from Alan Turing and other pioneers of Artificial Intelligence. It has since been accepted as a valid area of research, with the annual International Conference on Computational Creativity heading into its fifth round.
+This area of research has come under scrutiny for philosophical reasons, but has had support from Alan Turing and other pioneers of Artificial Intelligence. It has since been accepted as a valid area of research, with the annual International Conference on Computational Creativity heading into its fifth year.
 
 Successes of Computational Creativity:
 \begin{itemize}
 \item{Simon Colton's \textit{Painting Fool}\cite{colton2012painting} produced paintings that managed to trick art lovers into believing that it was the work of a talented human artist. An example is given in Figure \ref{fig:chair}.}
-\item{\textit{JAPE}\cite{binsted1997computational}, created by Ritchie and Binsted in 1994 was given a general, non-humorous lexicon and generated puns as answers to questions. For example:\\\textit{Q:What do you call a strange market?\\ A: A bizarre bazaar}}
-\item{\textit{Iamus} by Gustavo Diaz-Jerez\cite{diaz2011composing}, which composed music entirely on its own that was then recorded by London Symphony Orchestra}
+\item{\textit{JAPE}\cite{binsted1997computational}, created by Ritchie and Binsted in 1994 was given a general, non-humorous lexicon and generated puns as answers to questions. For example:\\\textit{Q:What do you call a strange market?\\ A: A bizarre bazaar}.}
+\item{\textit{Iamus} by Gustavo Diaz-Jerez\cite{diaz2011composing}, which composed music entirely on its own that was then recorded by London Symphony Orchestra.}
 \item{\textit{The Policeman's Beard is Half Constructed}\cite{chamberlain1984policeman} is recognised for being the first book, which included some poetry, to have been written entirely by a computer program, RACTER.}
 \end{itemize} 
 
@@ -444,16 +433,16 @@ Successes of Computational Creativity:
 \section{Brief Overview of Computational Linguistics}
 Computational Linguistics is a wide area of research, covering Speech Recognition, Natural Language Processing and Generation and with overlaps in several other areas such as Machine Learning and Knowledge Representation. In fact, Daniel Jurafsky and James H. Martin needed almost a thousand pages to cover the foundations of this area\cite{jurafsky2000speech}.
 
-Automatic Poetry Generation uses many lessons from Computational Linguistics. Here we will briefly discuss the major ones in general and in the context of machine poetry analysis and generation. For an in depth general study of Computational Linguistics, we refer the interested reader to Jurafsky and Martin's book.
+Automatic poetry generation borrows many techniques and terminology from Computational Linguistics. Here we will briefly discuss the major ones in general and in the context of machine poetry analysis and generation. For an in depth general study of Computational Linguistics, we refer the interested reader to Jurafsky and Martin's book.
 %http://www.cse.iitk.ac.in/users/mohit/Speech-and-Language-Processing.pdf
 
 \subsection{Words}
 \label{sec:words}
-Words are the fundamental building blocks of language. They have been studied for creation of spell-checkers, text-to-speech synthesis and automatic speech recognition. Two major subsets where poetry is concerned is the study of pronunciation and morphology. 
+Words are the fundamental building blocks of language. They have been studied for the creation of spell-checkers, text-to-speech synthesis and automatic speech recognition. Two major subsets where poetry is concerned is the study of pronunciation and morphology. 
 
-The CMU Pronunciation Dictionary\cite{weide1998cmu} has taken the first steps towards computationally modelling the phonetics of words. It uses the ARPAbet phoneme set (see Table \ref{tab:arpa} in the Appendix) is highly important for poetry generation as it helps machines reason about rhyme and sound devices by simply comparing phonemes. It has over 133,000 words mapped to its corresponding pronunciation.
+The CMU Pronunciation Dictionary\cite{weide1998cmu} has taken steps towards computationally modelling the phonetics of words, using the ARPAbet phoneme set (see Table \ref{tab:arpa} in the Appendix). It is highly important for poetry generation as it helps machines reason about rhyme and sound devices by simply comparing phonemes. It has over 133,000 words mapped to corresponding pronunciations.
 
-To illustrate how this works, let us take two words that are spelled differently but pronounced the same - \textit{kite} and \textit{height}. The Jaro-Winkler distance, a normalised score of similarity between strings, for the tail of these words (in search of rhyme) gives 51.11\%, indicating that it is barely probable that they rhyme if we only looked at spelling. Their corresponding phoneme sets are \textit{'K AY1 T'} and \textit{'HH AY1 T} respectively. Now it is trivial to compare them and see that the tails are exactly the same and therefore rhyme.
+To illustrate how this works, let us take two words that are spelled differently but pronounced the same - \textit{kite} and \textit{height}. The Jaro-Winkler distance, a normalised score of similarity between strings, for the tail of these words (in search of rhyme) gives 51.11\%, indicating that it is barely probable that they rhyme if we only looked at spelling. Their corresponding phoneme sets are \textit{'K AY1 T'} and \textit{'HH AY1 T} respectively. Now it is trivial to compare them computationally and see that the tails are exactly the same and the words therefore rhyme.
 
 Notice the '1' appended to the 'AY' phonemes. Vowel phonemes come with a digit appended to them that defines the emphasis placed on this syllable:
 \begin{itemize}
@@ -462,9 +451,11 @@ Notice the '1' appended to the 'AY' phonemes. Vowel phonemes come with a digit a
 \item{2: light/secondary stress}
 \end{itemize}
 
-Morphology of words is the study of putting words together with morphemes, the smallest unit of grammar. To use Jarufsky and Martin's example, the word \textit{fox} consists of a single morpheme that is itself, but \textit{cats} has two morphemes, \textit{cat} and \textit{-s}. This is of vital importance in our project as we need to understand the difference between different forms of the same word and how they relate to context. Furthermore, when generating text we wish to produce coherent grammar with consistent tense and perspective.
+Morphology of words is the study of putting words together with \textit{morphemes}, the smallest unit of grammar. To use Jarufsky and Martin's example, the word \textit{fox} consists of a single morpheme that is itself, but \textit{cats} has two morphemes, \textit{cat} and \textit{-s}. This is of vital importance in our project as we need to understand the difference between different forms of the same word and how they relate to context. Furthermore, when generating text we wish to produce coherent grammar with consistent tense and perspective.
 
 The CLiPS Pattern library has a number of tools for morphology of words. It provides a method of changing a word into its first, second or third person version, pluralisation and finding superlatives.\cite{de2012pattern}
+
+SimpleNLG
 
 %http://delivery.acm.org/10.1145/980000/972475/p313-marcus.pdf?ip=82.31.135.169&id=972475&acc=OPEN&key=BF13D071DEA4D3F3B0AA4BA89B4BCA5B&CFID=397642531&CFTOKEN=69509660&__acm__=1390858444_560bb7766479576772371b53b664bc15
 
@@ -472,9 +463,9 @@ The CLiPS Pattern library has a number of tools for morphology of words. It prov
 \label{sec:syntax}
 Syntax is the glue that binds words together. It gives us an understanding of the grammatical relationship between words and guides the building of phrases and sentences.
 
-Core to this area of research is \textit{part-of-speech (POS)} analysis, which provides a model for grouping words together correctly, taking into account how words depend on each other. The big success story in this area is The Penn Treebank Tagset, an enormous corpus of annotated POS information \cite{marcus1993building}. The full tagset is given in Table \ref{tab:penn} in the APPENDIX. This accelerated progress of research in the area, as the paper had expected. 
+Core to this area of research is \textit{part-of-speech (POS)} analysis, which provides a model for grouping words together correctly, taking into account how words depend on each other. The big success story in this area is The Penn Treebank Tagset, an enormous corpus of annotated POS information \cite{marcus1993building}. The full tagset is given in Table \ref{tab:penn} in the Appendix. This accelerated progress of research in the area, as the paper had expected. 
 
-From these POS tags, we are able to create \textit{grammars}, the structural rules of phrases and sentences, and \textit{parsers} for those grammars to be able to extract grammatical structure from unstructured text.
+From these POS tags, we are able to create \textit{grammars}, the structural rules of phrases and sentences, and \textit{parsers} for those grammars that are able to extract grammatical structure from unstructured text.
 
 For example, the phrase \textit{John loves Mary} would be represented as in Figure \ref{fig:parse} if parsed with a grammar based on The Penn Treebank tagset.
 
